New upstream version 2.2.6

--- a/documentation/templates/home.html
+++ b/documentation/templates/home.html
@@ -1,6 +1,6 @@
 <h3>{{ 'Main Topics' }}</h3>
 <ul class="topless">
-<li><a href="{{ pathto('Installation.html#download', 1) }}">Download</a></li>
+<li><a href="{{ pathto('Installation.html', 1) }}">Download</a></li>
 <li><a href="{{ pathto('Tutorial.html', 1) }}">Tutorial</a></li>
 <li><a href="{{ pathto('Reference.html', 1) }}">Language Reference</a></li>
 <li>Manual (<a href="{{ pathto('Manual.html', 1) }}">html</a>,
